force-app/main/default/objects/custom_create331__c/custom_create331__c.object-meta.xml
<CustomObject>
    <label>Custom created object331</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects331</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>