force-app/main/default/objects/custom_create331__c/fields/custom_create_331field576__c.field-meta.xml
<CustomField>
    <fullName>custom_create_331field576__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 331field576</label>
    <type>Checkbox</type>
</CustomField>